--- a/src/locales/en/giza.json
+++ b/src/locales/en/giza.json
@@ -1,47 +1,46 @@
 {
-  "giza": {
+  "Gizeh": {
     "siteMetadata": {
-      "description": "Explore the Giza testnet"
+      "description": "Erforsche das Gizeh-Testnetzwerk"
     },
     "hero": {
-      "title": "Giza Network",
-      "text": "Alongside other planned enhancements, the Giza release introduces the first iteration of the Storage and Distribution System we will use on mainnet."
-    },
+      "Titel": "Gizeh-Netzwerk",
+      "text": "Neben anderen geplanten Verbesserungen führt die Gizeh-Version die erste Iteration des Speicher- und Verteilungssystems ein, das wir im Hauptnetz verwenden werden."    },
     "criticalDocuments": {
-      "title": "Critical Documents",
+      "title": "Kritische Dokumente",
       "releasePlan": {
-        "title": "Release Plan",
-        "text": "Read the release plan as it was made during the planning stage, and learn more about how the development evolved."
+        "title": "Freigabeplan",
+        "text": "Lesen Sie den Freigabeplan, wie er in der Planungsphase erstellt wurde und erfahren Sie mehr über den Verlauf der Entwicklung."
       },
       "blogPost": {
-        "title": "Announcement Blog Post",
-        "text": "Read a brief primer on the Giza testnet and its objectives."
+        "title": "Ankündigung Blog Post",
+        "text": "Lesen Sie eine kurze Einführung in das Gizeh-Testnetzwerk und seine Ziele."
       }
     },
     "testnetGoals": {
-      "title": "Testnet Goals",
-      "subtitle": "The goals listed below are a simplified representation of our main objectives for the Giza testnet.",
+      "title": "Ziele des Testnetzwerks",
+      "subtitle": "Die unten aufgeführten Ziele sind eine vereinfachte Darstellung unserer Hauptziele für das Gizeh-Testnetzwerk.",
       "goals": {
         "launchStorageAndDistribution": {
-          "title": "Launching V2 of the Storage and Distribution System",
-          "text": "This will include introducing distinct roles for data storage and distribution, as well as a storage system with redundancy and only partial replication of media on nodes, alongside other modifications outlined in the specification."
+          "title": "Start von V2 des Speicher- und Verteilungssystems",
+          "text": "Dies beinhaltet die Einführung getrennter Rollen für die Datenspeicherung und -verteilung sowie ein Speichersystem mit Redundanz und nur teilweiser Replikation der Medien auf den Knoten, neben anderen Änderungen, die in der Spezifikation beschrieben sind."
         },
         "contentDirectoryEnhancements": {
-          "title": "Content Directory Enhancements",
-          "text": "Within this release, improvements to the content directory system will focus on facilitating some planned community initiatives, cleaning up technical debt, and offering integration with the new storage system."
+          "title": "Erweiterungen des Inhaltsverzeichnisses",
+          "text": "In dieser Version konzentrieren sich die Verbesserungen am Inhaltsverzeichnissystem auf die Erleichterung einiger geplanter Gemeinschaftsinitiativen, die Bereinigung technischer Fehler und die Integration mit dem neuen Speichersystem."
         },
         "newOperationsWorkingGroups": {
-          "title": "New Operations Working Groups",
-          "text": "We've seen excellent results from the Operations Working Group enabled on the Sumer testnet. Now, in order to facilitate work on a few different orthogonal areas, or even to just scale up efforts within the same vertical, we are going to add two more new generic Operations Working Groups for Giza."
+          "title": "Neue operative Arbeitsgruppen",
+          "text": "Die Arbeitsgruppe "Operationen", die im Sumer-Testnetzwerk aktiviert wurde, hat hervorragende Ergebnisse erzielt. Um die Arbeit an verschiedenen orthogonalen Bereichen zu erleichtern oder auch nur die Bemühungen innerhalb derselben Vertikale zu verstärken, werden wir nun zwei weitere allgemeine Arbeitsgruppen für Gizeh einrichten."
         }
       }
     },
-    "roles": {
-      "title": "Incentivized Roles for the Giza Network"
+    "Rollen": {
+      "title": "Incentivierte Rollen für das Gizeh-Netzwerk"
     },
     "map": {
-      "title": "Giza",
-      "text": "<0>The area in what is now Giza served as the necropolis of several pharaohs who ruled ancient Egypt, during the 2nd millennium BC.</0> Three ancient tombs, constructed in the form of giant pyramids, make up the stunning and globally famed Giza pyramid complex.<1/><1/>These pyramids have served as emblems of Ancient Egypt in the Western imagination for hundreds of years. They were first \"popularised\" in Ancient Greece, when the Great Pyramid was listed by Antipater of Sidon as one of the Seven Wonders of the World.<1/><1/><2><0/> Read the blog post</2>"
+      "title": "Gizeh",
+      "text": "<0>Das Gebiet des heutigen Gizeh diente im 2. Jahrtausend v. Chr. als Nekropole mehrerer Pharaonen, die das alte Ägypten regierten.</0> Drei antike Gräber, die in Form von riesigen Pyramiden errichtet wurden, bilden den beeindruckenden und weltweit berühmten Pyramidenkomplex von Gizeh.<1/><1/>Diese Pyramiden sind in der westlichen Vorstellung seit Hunderten von Jahren ein Symbol für das alte Ägypten. Sie wurden erstmals im antiken Griechenland "populär" gemacht, als die Große Pyramide von Antipater von Sidon als eines der Sieben Weltwunder aufgeführt wurde.<1/><1/><2><0/> Lesen Sie den Blogbeitrag</2>"
     }
   }
 }
