german translation to giza.json

--- a/src/locales/en/giza.json
+++ b/src/locales/en/giza.json
@@ -31,7 +31,7 @@
         },
         "newOperationsWorkingGroups": {
           "title": "Neue operative Arbeitsgruppen",
-          "text": "Die Arbeitsgruppe "Operationen", die im Sumer-Testnetzwerk aktiviert wurde, hat hervorragende Ergebnisse erzielt. Um die Arbeit an verschiedenen orthogonalen Bereichen zu erleichtern oder auch nur die Bemühungen innerhalb derselben Vertikale zu verstärken, werden wir nun zwei weitere allgemeine Arbeitsgruppen für Gizeh einrichten."
+          "text": "Die operative Arbeitsgruppe, die im Sumer-Testnetzwerk aktiviert wurde, hat hervorragende Ergebnisse erzielt. Um die Arbeit an verschiedenen orthogonalen Bereichen zu erleichtern oder auch nur die Bemühungen innerhalb derselben Vertikale zu verstärken, werden wir nun zwei weitere allgemeine Arbeitsgruppen für Gizeh einrichten."
         }
       }
     },
