--- a/src/locales/en/sumer.json
+++ b/src/locales/en/sumer.json
@@ -1,47 +1,47 @@
 {
   "sumer": {
     "siteMetadata": {
-      "description": "Explore the Sumer testnet"
+      "description": "Erforsche das Sumer-Testnetzwerk"
     },
     "hero": {
-      "title": "Sumer Network",
-      "text": "Among other changes, the Sumer testnet release offers major improvements to content uploads through our playback app."
+      "title": "Sumer-Netzwerk",
+      "text": "Neben anderen Änderungen bietet die Version des Sumer-Testnetzwerks wichtige Verbesserungen beim Hochladen von Inhalten über unsere Wiedergabe-App."
     },
     "criticalDocuments": {
-      "title": "Critical Documents",
+      "title": "Kritische Dokumente",
       "releasePlan": {
-        "title": "Release Plan",
-        "text": "Read the release plan as it was made during the planning stage, and learn more about how the development evolved."
+        "title": "Freigabeplan",
+        "text": "Lesen Sie den Freigabeplan, wie er in der Planungsphase erstellt wurde, und erfahren Sie mehr über den Verlauf der Entwicklung."
       },
       "blogPost": {
-        "title": "Announcement Blog Post",
-        "text": "Read a brief primer on the Sumer testnet and its objectives."
-      }
+        "title": "Ankündigung Blog Post",
+        "text": "Lesen Sie eine kurze Einführung in das Sumer-Testnetzwerk und seine Ziele."      }
     },
     "testnetGoals": {
-      "title": "Testnet Goals",
-      "subtitle": "The goals listed below are a simplified representation of our main objectives for the Sumer testnet.",
+      "title": "Ziele des Testnetzwerks",
+      "subtitle": "Die unten aufgeführten Ziele sind eine vereinfachte Darstellung unserer Hauptziele für das Sumer-Testnetzwerk.",
       "goals": {
         "contentPublishing": {
-          "title": "Enable content publishing from playback interface",
-          "text": "Sumer introduces the ability to create and manage channels and videos in the Joystream Player, replacing the cumbersome and technically challenging CLI-dependent process required on the Antioch testnet."
+          "title": "Veröffentlichung von Inhalten über die Wiedergabeschnittstelle aktivieren",
+          "text": "Sumer führt die Möglichkeit ein, Kanäle und Videos im Joystream Player zu erstellen und zu verwalten und ersetzt damit den umständlichen und technisch anspruchsvollen CLI-abhängigen Prozess, der im Antioch-Testnetzwerk erforderlich war."
         },
         "deployingNewContentDirectory": {
-          "title": "Deploying the new content directory",
-          "text": "As part of Sumer we will be introducing a simple native runtime module. This is because technical complexities and tradeoffs associated with the previous iterations of the content directory were not acceptable."
+          "title": "Bereitstellen des neuen Inhaltsverzeichnisses",
+          "text": "Als Teil von Sumer werden wir ein einfaches natives Laufzeitmodul einführen. Der Grund dafür ist, dass die technische Komplexität und die Kompromisse, die mit den vorherigen Iterationen des Inhaltsverzeichnisses verbunden waren, nicht akzeptabel waren."
         },
         "enableBuilderRole": {
           "title": "Enable builder/platform operations role",
-          "text": "We are introducing a new working group focused on platform operations. Originally, we had also planned to enable the new \"Gateway\" role, though this is no longer in the scope of the Sumer release."
+          "text": "Wir führen eine neue Arbeitsgruppe ein, die sich auf den Betrieb von Plattformen konzentriert. Ursprünglich hatten wir auch geplant, die neue Rolle "Gateway" zu aktivieren, obwohl dies nicht mehr zum Umfang des Sumer-Releases gehört."
         }
       }
     },
     "roles": {
-      "title": "Incentivized Roles for the Sumer Network"
+      "title": "Incentivierte Rollen für das Sumer-Netzwerk"
     },
     "map": {
       "title": "Sumer",
-      "text": "<0>Sumer is the earliest known civilization in the historical region of southern Mesopotamia</0>, emerging during the Chalcolithic and early Bronze Ages between the sixth and fifth millennium BC.<1/><1/>Living along the valleys of the Tigris and Euphrates, Sumerian farmers grew an abundance of grain and other crops, the surplus from which enabled them to form urban settlements. The region is thought to be where the earliest forms of writing emerged.<1/><1/><2><0/> Read the blog post</2>"
+      "text": "<0>Sumer ist die früheste bekannte Zivilisation in der historischen Region Südmesopotamien</0>, die während der Jungsteinzeit und der frühen Bronzezeit zwischen dem sechsten und fünften Jahrtausend v. Chr. entstand.<1/><1/>Die sumerischen Bauern lebten entlang der Täler von Tigris und Euphrat und bauten Getreide und andere Feldfrüchte im Überfluss an, was es ihnen ermöglichte, städtische Siedlungen zu bilden. Man nimmt an, dass in dieser Region die frühesten Formen der Schrift entstanden sind.<1/><1/><2><0/> Lesen Sie den Blogbeitrag</2>"
     }
   }
 }
+
