german translation to token.json

--- a/src/locales/en/token.json
+++ b/src/locales/en/token.json
@@ -1,67 +1,66 @@
 {
-  "token": {
+  "Token": {
     "siteMetadata": {
       "title": "Token",
-      "description": "Participants on our testnets can now earn Joystream Testnet Tokens (tJOYs) backed by fiat currency."
-    },
+      "description": "Teilnehmer unseres Testnetzwerks können jetzt Joystream Testnet Tokens (tJOYs) verdienen, die durch Fiat-Währung gesichert sind."    },
     "hero": {
-      "title": "Understanding the tJOY token",
-      "text": "Participants on our testnets can now earn Joystream Testnet Tokens (tJOYs) backed by fiat currency.",
+      "title": "Den tJOY-Token verstehen",
+      "text": "Teilnehmer unseres Testenetzwerks können jetzt Joystream Testnet Tokens (tJOYs) verdienen, die durch Fiat-Währung gesichert sind.",
       "tokenStats": {
-        "title": "Token in numbers",
-        "exchangeRate": "Exchange Rate",
-        "backingValue": "Backing Value",
-        "supply": "Supply"
+        "title": "Token in Zahlen",
+        "exchangeRate": "Umrechnungskurs",
+        "backingValue": " Hintergrundwert",
+        "supply": " Versorgung"
       }
     },
     "faq": {
-      "title": "Testnet Token Information",
+      "title": "Testnetzwerk Token Information",
       "whatIsTJoy": {
-        "title": "What is tJOY?",
-        "text": "tJOY (testJOY) is the currency used on Joystream incentivized testnets."
+        "title": "Was ist tJOY?",
+        "text": "tJOY (testJOY) ist die Währung, die in den incentivierten Testnetzwerken von Joystream verwendet wird."
       },
       "tJoyValueOrigin": {
-        "title": "Where does the value of tJOY come from?",
-        "text": "Jsgenesis, the team behind the Joystream project, have linked the total supply of tJOYs to a corresponding pool of fiat currency (USD) held by the company. All testnet participants can redeem their tJOY for USD at any time."
+        "title": "Woher kommt der Wert von tJOY?",
+        "text": "Jsgenesis, das Team hinter dem Joystream-Projekt, hat das Gesamtangebot an tJOYs mit einem entsprechenden Pool an Fiat-Währung (USD) verknüpft, den das Unternehmen hält. Alle Teilnehmer des Testnetzwerks können ihre tJOYs jederzeit gegen USD eintauschen."
       },
       "purposeOfTJoy": {
-        "title": "What is the purpose of tJOY?",
-        "text": "tJOY can be used on our testnets in the same ways that future users of the Joystream platform will be able to use the mainnet JOY token. The three principal functions of tJOY are in staking, governance and for payment.<0/><0/> For example, to participate in testnet roles, users may need to stake tJOY. To create governance proposals and vote for Council Members, tJOY is also required. Finally, on the testnet, bounties and KPIs require tJOYs for paying effective contributors."
+        "title": "Was ist der Zweck von tJOY?",
+        "text": "tJOY kann in unseren Testnetzwerken auf die gleiche Weise verwendet werden, wie zukünftige Nutzer der Joystream-Plattform den JOY-Token im Hauptnetz verwenden können. Die drei Hauptfunktionen von tJOY sind Staking, Governance und Payment.<0/><0/> Um beispielsweise an Testnetzwerk-Rollen teilzunehmen, müssen Nutzer tJOY einsetzen. Für die Erstellung von Vorschlägen zur Verwaltung und die Wahl von Ratsmitgliedern ist tJOY ebenfalls erforderlich. Im Testnetzwerk schließlich benötigen Kopfgelder und KPIs tJOYs für die Bezahlung effektiver Mitwirkender."
       },
       "whereCanTJoyBeObtained": {
-        "title": "Where can I get tJOY?",
-        "text": "There are many opportunities to obtain tJOY. Smaller amounts can be requested in our community channels (including our Discord server and on-chain forum), while larger sums can be accumulated by participating in bounties, competitions and other events."
+        "title": "Wo kann ich tJOY bekommen?",
+        "text": "Es gibt viele Möglichkeiten, tJOY zu erhalten. Kleinere Beträge können in unseren Community-Kanälen (einschließlich unseres Discord-Servers und des On-Chain-Forums) angefordert werden, während größere Beträge durch die Teilnahme an Kopfgeldern, Wettbewerben und anderen Events gesammelt werden können."
       },
       "linkBetweenTJoyAndFutureToken": {
-        "title": "Is there any link between tJOY and the future mainnet token?",
-        "text": "There is no direct link between tJOY and mainnet JOY. We are using tJOY to simulate the real economic incentives present on mainnet to aid the platform's development and facilitate the growth and education of our community in preparation of the transition from testnet to mainnet."
+        "title": "Gibt es eine Verbindung zwischen tJOY und dem zukünftigen Hauptnetz-Token?",
+        "text": "Es gibt keine direkte Verbindung zwischen tJOY und dem Hauptnetz JOY. Wir verwenden tJOY, um die realen wirtschaftlichen Anreize zu simulieren, die im Hauptnetz vorhanden sind, um die Entwicklung der Plattform zu unterstützen und das Wachstum und die Ausbildung unserer Gemeinschaft in Vorbereitung auf den Übergang vom Testnetzwerk zum Hauptnetz zu erleichtern."
       },
       "howToCashout": {
-        "title": "How do I cashout tJOY to USD?",
-        "text": "We use Bitcoin Cash (BCH) as a payment rail on our testnets. You can cashout tJOY by making a transfer to the dedicated burn address: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> Before doing this, you should set the <0>memo</0> of the key from which the transfer is made to your BCH address. At the moment of the transfer, the BCH to USD exchange rate is locked. <1/><1/>More information on payouts can be found <2>here</2>."
+        "title": "Wie kann ich mir tJOY in USD auszahlen lassen?",
+        "text": "Wir verwenden Bitcoin Cash (BCH) als Zahlungsmittel in unseren Testnetzwerken. Sie können sich tJOY auszahlen lassen, indem Sie eine Überweisung an die spezielle Burn-Adresse vornehmen: <0>5D5PhZQNJzcJXVBxwJxZcsutjKPqUPydrvpu6HeiBfMaeKQu</0> Bevor Sie dies tun, sollten Sie das <0>Memo</0> des Schlüssels, von dem aus die Überweisung getätigt wird, auf Ihre BCH-Adresse setzen. Zum Zeitpunkt der Überweisung wird der Wechselkurs von BCH zu USD festgelegt. <1/><1/>Weitere Informationen zu Auszahlungen finden Sie <2>hier</2>."
       },
       "howToEarn": {
-        "title": "How can I earn mainnet JOY?",
-        "text": "Currently, the only way to secure an allocation of mainnet JOY is through high-quality contributions to the platform and community via our <0>Founding Member Program</0>."
+        "title": "Wie kann ich im Hauptnetz JOY verdienen?",
+        "text": "Derzeit ist die einzige Möglichkeit, sich eine Zuteilung von Hauptnetz-JOY zu sichern, durch hochwertige Beiträge zur Plattform und zur Community über unser <0>Gründungsmitgliederprogramm</0>."
       },
       "TJoyWorth": {
         "title": "How much is tJOY worth?",
-        "text": "You can check the live exchange rate (tJOY->USD) on this page (see above)."
+        "text": "Sie können den aktuellen Wechselkurs (tJOY->USD) auf dieser Seite überprüfen (siehe oben)."
       }
     },
-    "cashouts": {
-      "title": "Pending cashouts",
-      "subtitle": "Tokens sent to Jsgenesis in this exchange are burned, hence the final price of the token is unaffected by such an exchange.",
+    "Auszahlungen": {
+      "title": "Ausstehende Auszahlungen",
+      "subtitle": "Token, die im Rahmen dieses Austauschs an Jsgenesis gesendet werden, werden verbrannt, daher wird der endgültige Preis des Tokens durch einen solchen Austausch nicht beeinflusst.",
       "cashout": {
-        "address": "Source address",
-        "tokensTransferred": "Tokens transferred",
-        "usdValue": "USD Value",
-        "blockNumber": "Block Number",
+        "Adresse": "Quelladresse",
+        "tokensTransferred": "Übertragene Token",
+        "usdValue": "USD-Wert",
+        "blockNumber": "Blocknummer",
         "exchangeNumber": "Exchange #"
       }
     },
     "cta": {
-      "title": "Join our Discord and change the online video industry"
+      "title": "Tritt unserem Discord bei und verändere die Online-Videoindustrie"
     }
   }
 }
