--- a/src/locales/en/brand.json
+++ b/src/locales/en/brand.json
@@ -1,16 +1,16 @@
 {
-  "brand": {
+  "Marke": {
     "siteMetadata": {
-      "title": "Joystream Brand Guide"
+      "title": "Joystream Markenhandbuch"
     },
     "assets": {
-      "logo": "Logo",
-      "logoIcons": "Logo Icons",
-      "descriptiveIcons": "Descriptive Icons",
-      "illustrations": "Illustrations",
-      "systemIcons": "System Icons",
-      "typography": "Typography",
-      "blogPostCovers": "Blog Post Covers",
+      "Logo": "Logo",
+      "logoIcons": "Logo-Symbole",
+      "descriptiveIcons": "Beschreibende Icons",
+      "Illustrations": "Illustrationen",
+      "systemIcons": "System-Symbole",
+      "typography": "Typografie",
+      "blogPostCovers": "Blog Post Cover",
       "displayTitle": {
         "logoPack": "Logo Pack"
       },
@@ -18,71 +18,74 @@
     },
     "guides": {
       "general": {
-        "logo": "Logo",
-        "overview": "Overview",
-        "logomark": "Logomark",
-        "construction": "Construction",
-        "useCases": "Use Cases",
-        "socialIcons": "Social Icons",
-        "forbiddenUses": "Forbidden Uses",
-        "colorPalettes": "Color Palettes",
-        "primaryColors": "Primary Colors",
-        "supportivePallete": "Supportive Pallete",
-        "secondaryPallete": "Secondary Pallete",
-        "iconography": "Iconography",
-        "descriptiveIcons": "Descriptive Icons",
-        "systemIcons": "System Icons",
-        "illustrations": "Illustrations",
-        "patterns": "Patterns",
-        "typography": "Typography",
-        "photography": "Photography",
-        "motion": "Motion",
-        "back": "Back",
-        "more": "More"
+        "Logo": "Logo",
+        "Übersicht": "Übersicht",
+        "logomark": "Logomarke",
+        "construction": "Konstruktion",
+        "useCases": "Anwendungsfälle",
+        "socialIcons": "Soziale Symbole",
+        "forbiddenUses": "Verbotene Anwendungen",
+        "colorPalettes": "Farbpaletten",
+        "primaryColors": "Primärfarben",
+        "supportivePallete": "Unterstützungspalette",
+        "SekundärPalette": "Sekundäre Palette",
+        "Ikonographie": "Ikonographie",
+        "descriptiveIcons": "Beschreibende Icons",
+        "systemIcons": "System-Symbole",
+        "illustrations": "Illustrationen",
+        "patterns": " Muster",
+        "typography": "Typografie",
+        "photography": "Fotografie",
+        "motion": "Bewegung",
+        "back": "Zurück",
+        "more": "Mehr"
       },
       "logo": {
-        "experimentation": "Our brand should promote a feeling of experimentation, excitement and building something ethical and dynamic.",
-        "conceptIterations": "Before we agreed on a final logo concept we went through multiple iterations of various concepts. We explored various ideas in depth before settling on the final logo concept."
+        "experimentation": "Unsere Marke soll ein Gefühl des Experimentierens, der Aufregung und des Aufbaus von etwas ethischem und dynamischem vermitteln.",
+        "conceptIterations": "Bevor wir uns auf ein endgültiges Logokonzept einigten, durchliefen wir mehrere Iterationen verschiedener Konzepte. Wir untersuchten verschiedene Ideen eingehend, bevor wir uns auf das endgültige Logokonzept einigten."
       },
       "logomarkConstruction": {
-        "title": "01. Logomark Construction",
-        "simplePrinciples": "In the end we came up with a logomark that combines several simple principles which translate well to the voice of the brand.",
-        "combination": "Our logomark is a combination of the letter J (to represent the name Joystream) and three parallel stripes that are a representation of streaming data and the flow of information and technology.",
+        "title": "01. Logomark-Konstruktion",
+        "simplePrinciples": "Am Ende haben wir ein Logomark entwickelt, das mehrere einfache Prinzipien kombiniert, die sich gut auf die Stimme der Marke übertragen lassen.",
+        "combination": "Unser Logomark ist eine Kombination aus dem Buchstaben J (um den Namen Joystream zu repräsentieren) und drei parallelen Streifen, die das Streaming von Daten und den Informations- und Technologiefluss darstellen.",
         "image": {
-          "logomarkDescription": "Logomark's exclusion zone is equal to the blue square height (marked as 5a in the diagram)."
+          "logomarkDescription": "Die Ausschlusszone von Logomark entspricht der Höhe des blauen Quadrats (im Diagramm als 5a gekennzeichnet)."
         }
       },
       "logoConstruction": {
-        "title": "02. Logo Construction",
-        "combination": "The Joystream logo is a combination of the logomark and dedicated typography that was designed to be the best link between the logomark and what Joystream stands for. It is firm and technical but shows plasticity and sense of a structure.",
-        "horizontalLockup": "Horizontal Lockup",
-        "verticalLockup": "Vertical Lockup"
+        "title": "02. Logo-Konstruktion",
+        "combination": "Das Joystream-Logo ist eine Kombination aus der Bildmarke und einer speziellen Typografie, die so gestaltet wurde, dass sie die beste Verbindung zwischen der Bildmarke und dem, wofür Joystream steht, darstellt. Es ist fest und technisch, zeigt aber Plastizität und Sinn für eine Struktur.",
+        "horizontalLockup": "Horizontale Sperre",
+        "verticalLockup": " Vertikale Sperre"
       },
       "logoUseCases": {
-        "title": "03. Logo Use Cases",
-        "originalForm": "The Joystream logo is primarly used in its original form on white backgrounds but it can also be used in its complimentary forms if necessary. Examples show such use cases below.",
-        "safeUse": "The smallest safe use",
-        "visualPresentation": "In order to ensure the best visual presentation of the logo, it is best offered in sizes between <0>200 and 500+px</0> width on digital devices.",
-        "horizontalNarrow": "The Joystream logo should never be narrower than 100px in digital or 20mm in print horisontal lockup.",
-        "verticalNarrow": "Vertical lockup should never be narrower than 70px in digital or 15mm in print."
+        "title": "03. Logo Anwendungsfälle",
+        "originalForm": "Das Joystream-Logo wird in erster Linie in seiner ursprünglichen Form auf weißem Hintergrund verwendet, kann aber bei Bedarf auch in seinen ergänzenden Formen verwendet werden. Die folgenden Beispiele zeigen solche Anwendungsfälle.",
+        "safeUse": "Die kleinste sichere Verwendung",
+        "visualPresentation": "Um die beste visuelle Darstellung des Logos zu gewährleisten, wird es am besten in Größen zwischen <0>200 und 500+px</0> Breite auf digitalen Geräten bereitgestellt.",
+        "horizontalNarrow": "Das Joystream-Logo sollte nie schmaler als 100px in digitaler oder 20mm in gedruckter horizontaler Darstellung sein.",
+        "verticalNarrow": "Die vertikale Aufhängung sollte nie schmaler als 70px im digitalen oder 15mm im gedruckten Bereich sein."
       },
       "logoSocialIcons": {
-        "title": "04. Social Icons",
-        "icon": "In cases when the Joystream brand has already been established we can simply use the icon on its own. While the icon can exist without the wordmark, the wordmark should never exist without the icon."
+        "title": "04. Soziale Symbole",
+        "icon": "In Fällen, in denen die Marke Joystream bereits etabliert ist, können wir das Icon einfach für sich allein verwenden. Während das Icon ohne die Wortmarke existieren kann, sollte die Wortmarke niemals ohne das Icon existieren."
       },
       "logoForbiddenUses": {
-        "title": "05. Forbidden uses of the logo",
-        "rules": "The logotype and the icon must follow certain rules and there are general cases of use that should be avoided at all costs! In order to preserve the brand voice remember to avoid examples such as the following:"
+        "title": "05. Verbotene Verwendungen des Logos",
+        "rules": "Der Schriftzug und das Symbol müssen bestimmten Regeln folgen und es gibt allgemeine Verwendungsfälle, die unbedingt vermieden werden sollten! Um die Identität der Marke zu bewahren, sollten Sie Beispiele wie die folgenden vermeiden:"
       },
       "colorOverview": {
-        "combine": "Our brand colors combine three primary colors: black, white and blue. They define the mood and present brand values including:",
-        "example": "Stability, Trust, Freedom, Responsibility, Loyalty, Wisdom, Confidence and Intelligence"
+        "kombinieren": "Unsere Markenfarben kombinieren drei Grundfarben: Schwarz, Weiß und Blau. Sie bestimmen die Stimmung und präsentieren Markenwerte wie:",
+        "example": "Stabilität, Vertrauen, Freiheit, Verantwortung, Loyalität, Weisheit, Zuversicht und Intelligenz"
       },
       "primaryColors": {
-        "title": "01. Primary Colors",
-        "blackAndBlue": "Our primarly used colors are black and Joystream blue, a distinctive color that helps to put focus and draw attention. The color white can be deployed in order to calm, provide clarity and offer improved readability.",
-        "blueGrey": "One additional color to combine with the three primary colors is blue tinted grey, its purpose is comparable to that of white but it also gives a good amount of contrast to the existing white elements where necessary."
+        "title": "01. Primärfarben",
+        "blackAndBlue": "Unsere primär verwendeten Farben sind Schwarz und Joystream-Blau, eine unverwechselbare Farbe, die dazu beiträgt, den Fokus zu setzen und Aufmerksamkeit zu erregen. Die Farbe Weiß kann eingesetzt werden, um zu beruhigen, Klarheit zu schaffen und eine bessere Lesbarkeit zu bieten.",
+        "blueGrey": "Eine zusätzliche Farbe, die mit den drei Grundfarben kombiniert werden kann, ist blau getöntes Grau, dessen Zweck mit dem von Weiß vergleichbar ist, das aber auch einen guten Kontrast zu den vorhandenen weißen Elementen bietet, wo dies erforderlich ist."
       },
+*** Übersetzt mit www.DeepL.com/Translator (kostenlose Version) ***
+
+
       "supportiveColors": {
         "title": "02. Supportive Color Palette",
         "purpose": "Our supportive palette serves the purpose of convenience and usability. This pallete provides a comprehensive range of different shades of primary colors and can be utilised in many different ways depending on requirements."
